tests/int/snapshots/integration__int__command__flag_h.snap
---
source: tests/int/command.rs
info:
  program: crawk
  args:
    - "-h"
---
success: true
exit_code: 0
----- stdout -----
Analyze Rust module dependencies and structure

Usage: crawk [OPTIONS] <COMMAND>

Commands:
  use    Analyze a module and report all internal crate references [alias: u]
  list   List all modules in the crate [aliases: ls, l]
  deps   Show inter-module dependency graph for the entire crate [aliases: d, dependencies]
  why    Explain why a module depends on another module [alias: w]
  check  Check module dependencies against architectural rules [alias: c]
  help   Print this message or the help of the given subcommand(s)

Options:
  -p, --path <PATH>          Specify path to the crate root directory (defaults to current directory)
  -v, --verbose...           Increase output verbosity (-v for info, -vv for debug)
  -l, --log-file <LOG_FILE>  Write logs to specified file (INFO level, or DEBUG with -vv)
  -h, --help                 Print help (see more with '--help')
  -V, --version              Print version

Run 'crawk --help' for full help message.
Run 'crawk COMMAND --help' for more information on a command.

----- stderr -----
